# tokamak_radiation_environment

./: .gitignore  README.md  TODO.md  pyproject.toml  setup.py
.github/workflows/: CI.yaml
notebooks/: create_materials.ipynb  iter_arc_magnet_flux.ipynb  make_core_components.ipynb  make_pfcoils_components.ipynb  make_tfcoil_components.ipynb  make_tfcoils_components.ipynb  plot_cross_sections.ipynb  plot_weight_windows.ipynb
reactors/arc_class/: DELETE.ipynb  component_nodes.py  example_statepoint.030.h5  openmc_model.py
reactors/iter_class/: component_nodes.py  components_nodes.py  example_statepoint.100.h5  from_paramak.ipynb  from_paramak.py  iter.stp  openmc_model.py
reactors/ornl_hfir/: spectrum.txt
src/tokamak_radiation_environment/: __init__.py  components.py  materials.py  prove.ipynb
tokamak_radiation_environment/: components.py  materials.py  prove.ipynb
tutorials/: create_materials.ipynb  make_core_components.ipynb
