[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tokamak_radiation_environment"
version = "0.0.1"
authors = [
  { name="Stefano segantin", email="segantin@psfc.mit.edu" },
]
description = "Tokamak Radiation Environment"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy",
    "pandas",
    "matplotlib"
]

[project.urls]
"Homepage" = "https://github.com/tokamak_radiation_environment"
"Bug Tracker" = "https://github.com/SteSeg/tokamak_radiation_environment/issues"